로그인화면 추가
로그인 버튼은 미완성(보라색)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".login" android:label="login 액티비티" />
+
     </application>
 
 </manifest>
